--- a/variables-dev.yaml
+++ b/variables-dev.yaml
@@ -2,9 +2,9 @@ MONGODB_HOST: mongodb-dev.suresh.fun  # submit your host
 REDIS_HOST: redis-dev.suresh.fun 
 MYSQL_HOST: mysql-dev.suresh.fun 
 RABBITMQ_HOST: rabbitmq-dev.suresh.fun 
-CATALOGUE_HOST: catalogue-dev.suresh.fun 
-USER_HOST: user-dev.suresh.fun 
-CART_HOST: cart-dev.suresh.fun 
-SHIPPING_HOST: shipping-dev.suresh.fun 
-PAYMENT_HOST: payment-dev.suresh.fun 
-DISPATCH_HOST: dispatch-dev.suresh.fun 
+CATALOGUE_HOST: catalogue.app-dev.suresh.fun
+USER_HOST: user.app-dev.suresh.fun
+CART_HOST: cart.app-dev.suresh.fun 
+SHIPPING_HOST: shipping.app-dev.suresh.fun 
+PAYMENT_HOST: payment.app-dev.suresh.fun 
+DISPATCH_HOST: dispatch.app-dev.suresh.fun 
